# ChangeLog for x11-misc/xfishtank
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfishtank/ChangeLog,v 1.9 2005/12/18 15:29:38 nelchael Exp $

  18 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org>
  +files/xfishtank-2.1tp-Makefile.patch, xfishtank-2.1.ebuild:
  Fix Makefile to use CFLAGS (bug #115938).

  18 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> xfishtank-2.1.ebuild:
  Fix dodoc - bug #115860.

  01 Nov 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  xfishtank-2.1.ebuild:
  Marked ppc stable, bug #111125

  27 Apr 2005; Stephanie Lockwood-Childs <wormo@gentoo.org>
  xfishtank-2.1.ebuild:
  mark ~ppc

  28 Aug 2004; Tom Gall <tgall@gentoo.org> xfishtank-2.1.ebuild:
  stable on ppc64, bug #59387

  20 Jun 2004; Ian Leitch <port001@gentoo.org> xfishtank-2.1.ebuild:
  Removed HOMEPAGE from SRC_URI

  14 Jun 2004; <pyrania@gentoo.org> xfishtank-2.1.ebuild:
  Stable on x86.

*xfishtank-2.1 (12 Apr 2004)

  12 Apr 2004; Markus Nigbur <pyrania@gentoo.org> metadata.xml,
  xfishtank-2.1.ebuild:
  Initial import. Closing bug #42706.
