@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xfishtank
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfishtank/ChangeLog,v 1.9 2005/12/18 15:29:38 nelchael Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xfishtank/ChangeLog,v 1.10 2006/01/21 17:18:10 nelchael Exp $
+
+  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> xfishtank-2.1.ebuild:
+  Fixed DEPEND for modular X.
 
   18 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org>
   +files/xfishtank-2.1tp-Makefile.patch, xfishtank-2.1.ebuild:
